--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL='mysql://wo15brhe122flpb4oyac:pscale_pw_7tSBxJR8xVAUE5BPMhPQbpncMeFwjTP2GqR2UApYQnE@aws.connect.psdb.cloud/t3_tutorial_db?sslaccept=strict'
